--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = geomanager
-version = 0.5.8
+version = 0.5.9
 description = Wagtail based Geospatial Data Manager
 long_description = file:README.md
 long_description_content_type = text/markdown
@@ -34,9 +34,9 @@ install_requires =
     django_json_widget>=1.1.1
     django_nextjs==2.4.0
     django-allauth>=0.54.0
-    django-large-image>=0.10.0
-    large-image-source-rasterio>=1.22.2
-    large-image-source-pil>=1.22.2
+    django-large-imag==0.10.2
+    large-image-source-rasterio>=1.34.0
+    large-image-source-pil>=1.34.0
     django-filter>=22.1
     cftime>=1.6.2
     netCDF4>=1.6.3
